--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@
   --white-color: #FBFBFB;
   --black-color: #0C0C0C;
   --green-color: #64CCC5;
+  --orange-color: #ffd930;
 }
 
 *, *::after, *::before {
@@ -79,18 +80,51 @@ img {
 }
 
 button {
+  display: inline-block;
   color: var(--text-color);
   font-family: "DM Sans", sans-serif;
   font-size: 1.125rem;
   letter-spacing: 0.03375rem;
-  padding: 12px 15px;
+  padding: 11px 15px;
   border-radius: 23px;
-  background: var(--white-color);
+  background-color: var(--white-color);
+  cursor: pointer;
+  overflow: hidden;
+  z-index: 1;
+  position: relative;
+  transition: all 0.3s;
+  border: none;
+}
+button::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--white-color);
+  border-radius: 10rem;
+  z-index: -2;
+}
+button::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: var(--orange-color);
+  transition: all 0.3s;
+  border-radius: 10rem;
+  z-index: -1;
+}
+button:hover::before {
+  width: 100%;
 }
 
 /*Header*/
 header {
-  padding-top: 22px;
+  padding-top: 21px;
   background-color: var(--black-color);
 }
 header .container {
@@ -98,15 +132,22 @@ header .container {
   justify-content: space-between;
   margin-left: 226px;
 }
-header .container .main-menu ul {
+
+.main-menu ul {
   display: flex;
   gap: 40px;
-  padding: 16px 0;
+  padding: 17px 0;
 }
-header .container .main-menu ul a, header .container .main-menu ul a:visited, header .container .main-menu ul :active {
+.main-menu ul a, .main-menu ul a:visited, .main-menu ul :active {
   color: var(--white-color);
 }
-header .container .hamburger {
+
+.buttons-block {
+  margin-right: 6px;
+  margin-top: 5px;
+}
+
+.hamburger {
   display: none;
 }
 
@@ -114,8 +155,160 @@ header .container .hamburger {
   color: var(--green-color);
 }
 
-main .first {
+main {
+  position: relative;
+}
+main::before {
+  position: absolute;
+  content: url("../img/index/ornament.svg");
+  top: calc(1% + 36px);
+}
+
+.first {
   background-color: var(--black-color);
+  padding-top: 160px;
+  padding-bottom: 117px;
+  background-image: url("../img/index/round-l.png");
+  background-repeat: no-repeat;
+  background-position: 95% 50%;
+  background-size: contain;
+}
+.first .container {
+  display: flex;
+  justify-content: space-between;
+}
+.first .text-content {
+  width: 610px;
+  color: var(--white-color);
+  margin-left: 5px;
+}
+.first h4 {
+  margin-top: 182px;
+  font-family: "Roboto Serif", serif;
+  font-weight: 600;
+  margin-bottom: 6px;
+}
+.first .image-box {
+  align-self: flex-start;
+  width: 550px;
+  aspect-ratio: 1;
+  margin-right: 45px;
+  margin-top: 10px;
+  position: relative;
+}
+.first .image-box::before {
+  content: url("../img/index/round-s.png");
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(0deg);
+  animation: rotate-small 10s linear infinite;
+}
+.first .image-box::after {
+  content: url("../img/index/round-m.png");
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-51%, -50%) rotate(0deg);
+  animation: rotate-big 3s linear infinite;
+}
+
+@keyframes rotate-big {
+  from {
+    transform: translate(-51%, -50%) rotate(0deg);
+  }
+  25% {
+    transform: translate(-52%, -51%) rotate(-90deg);
+  }
+  50% {
+    transform: translate(-53%, -52%) rotate(-150deg);
+  }
+  75% {
+    transform: translate(-52%, -51%) rotate(-180deg);
+  }
+  to {
+    transform: translate(-51%, -50%) rotate(-360deg);
+  }
+}
+@keyframes rotate-small {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  25% {
+    transform: translate(-52%, -53%) rotate(90deg);
+  }
+  50% {
+    transform: translate(-55%, -52%) rotate(150deg);
+  }
+  75% {
+    transform: translate(-53%, -51%) rotate(180deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+h1 {
+  font-family: "Roboto Serif", serif;
+  font-size: 4rem;
+  font-weight: 600;
+  padding-bottom: 24px;
+  letter-spacing: -0.1rem;
+}
+h1 + p {
+  width: 550px;
+  letter-spacing: 0.03375rem;
+  padding-bottom: 28px;
+}
+
+.start-trial-btn {
+  display: flex;
+  padding: 10px 20px 10px 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.25rem;
+  border-radius: 26px;
+  letter-spacing: -0.01rem;
+}
+
+.btn-arrow {
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  position: relative;
+  background-color: var(--black-color);
+  border-radius: 50%;
+}
+.btn-arrow::before {
+  content: "";
+  position: absolute;
+  border-top: 1px solid var(--white-color);
+  border-left: 1px solid var(--white-color);
+  z-index: 1;
+  left: 9px;
+  top: 10px;
+  width: 8px;
+  aspect-ratio: 1;
+  rotate: 135deg;
+}
+
+.partners-list {
+  display: flex;
+  width: 694px;
+  gap: 10px;
+  margin-left: -14px;
+}
+.partners-list li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.partners-list li svg {
+  fill: var(--white-color);
+}
+.partners-list li:hover svg {
+  fill: var(--green-color);
+  transition: all 0.5s ease;
 }
 
 .page-shadow {
