--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,7 @@
 	--white-color: #FBFBFB;
 	--black-color: #0C0C0C;
 	--green-color: #64CCC5;
+	--orange-color: #ffd930;
 
 }
 
@@ -43,47 +44,250 @@ img {
 }
 
 button {
+	display: inline-block;
 	color: var(--text-color);
 	font-family: "DM Sans", sans-serif;
 	font-size: 1.125rem;
 	letter-spacing: 0.03375rem;
-	padding: 12px 15px;
+	padding: 11px 15px;
 	border-radius: 23px;
-	background: var(--white-color);
+	background-color: var(--white-color);
+	cursor: pointer;
+	overflow: hidden;
+	z-index: 1;
+	position: relative;
+	transition: all .3s;
+	border: none;
+	&::after {
+		content: '';
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: var(--white-color);
+		border-radius: 10rem;
+		z-index: -2;
+	}
+	&::before {
+		content: '';
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 0%;
+		height: 100%;
+		background-color: var(--orange-color);
+		transition: all .3s;
+		border-radius: 10rem;
+		z-index: -1;
+
+  	}
+  	&:hover::before {
+      width: 100%;
+    }
 }
 
 
 /*Header*/
 
 header {
-	padding-top: 22px;
+	padding-top: 21px;
 	background-color: var(--black-color);
 	.container {
 		display: flex;
 		justify-content: space-between;
 		margin-left: 226px;
-		.main-menu ul {
-			display: flex;
-			gap: 40px;
-			padding: 16px 0;
-			a, a:visited, :active {
-				color: var(--white-color);
-			}
-		}
-		.hamburger {
-			display: none;
-		}
 	}
-} 
+}
+
+.main-menu ul {
+	display: flex;
+	gap: 40px;
+	padding: 17px 0;
+	a, a:visited, :active {
+		color: var(--white-color);
+	}
+}
+
+.buttons-block {
+	margin-right: 6px;
+	margin-top: 5px;
+}
+
+.hamburger {
+	display: none;
+}
 
 .green {
 	color: var(--green-color);
 }
 
-main .first {
-	background-color: var(--black-color);
+main {
+	position: relative;
+	&::before {
+		position: absolute;
+		content: url('../img/index/ornament.svg');
+		top: calc(1% + 36px);
+	}
 }
 
+.first {
+	background-color: var(--black-color);
+	padding-top: 160px;
+	padding-bottom: 117px;
+	background-image: url('../img/index/round-l.png');
+	background-repeat: no-repeat;
+	background-position: 95% 50%;
+	background-size: contain;
+	.container {
+		display: flex;
+		justify-content: space-between;
+	}
+	.text-content{
+		width: 610px;
+		color: var(--white-color);
+		margin-left: 5px;
+	}
+	h4 {
+		margin-top: 182px;
+		font-family: "Roboto Serif", serif;
+		font-weight: 600;
+		margin-bottom: 6px;
+	}
+	.image-box {
+		align-self: flex-start;
+		width: 550px;
+		aspect-ratio: 1;
+		margin-right: 45px;
+		margin-top: 10px;
+		position: relative;
+		&::before {
+			content: url('../img/index/round-s.png');
+			position: absolute;
+			top:50%;
+			left:50%;
+			transform: translate(-50%, -50%) rotate(0deg);
+			animation: rotate-small 10s linear infinite;
+		}
+		&::after {
+			content: url('../img/index/round-m.png');
+			position: absolute;
+			top:50%;
+			left:50%;
+			transform: translate(-51%, -50%) rotate(0deg);
+			animation: rotate-big 3s linear infinite;
+		}
+	}
+}
+
+@keyframes rotate-big {
+    from {
+        transform: translate(-51%, -50%) rotate(0deg);
+    }
+
+	25% {
+        transform: translate(-52%, -51%) rotate(-90deg);
+	}
+
+	50% {
+        transform: translate(-53%, -52%) rotate(-150deg);
+	}
+
+	75% {
+        transform: translate(-52%, -51%) rotate(-180deg);
+	}
+
+    to {
+        transform: translate(-51%, -50%) rotate(-360deg);
+    }
+}
+
+@keyframes rotate-small {
+    from {
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+
+	25% {
+        transform: translate(-52%, -53%) rotate(90deg);
+	}
+
+	50% {
+        transform: translate(-55%, -52%) rotate(150deg);
+	}
+
+	75% {
+        transform: translate(-53%, -51%) rotate(180deg);
+	}
+
+    to {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
+h1 {
+	font-family: "Roboto Serif", serif;
+	font-size: 4rem;
+	font-weight: 600;
+	padding-bottom: 24px;
+	letter-spacing: -0.1rem;
+	+ p {
+		width: 550px;
+		letter-spacing: 0.03375rem;
+		padding-bottom: 28px;
+	}
+}
+
+.start-trial-btn {
+	display: flex;
+	padding: 10px 20px 10px 10px;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	font-size: 1.25rem;
+	border-radius: 26px;
+	letter-spacing: -0.01rem;
+}
+
+.btn-arrow {
+	display: inline-block;
+	width: 28px;
+	height: 28px;
+	position: relative;
+	background-color: var(--black-color);
+	border-radius: 50%;
+	&::before {
+		content: '';
+		position: absolute;
+		border-top: 1px solid var(--white-color);
+		border-left: 1px solid var(--white-color);
+		z-index: 1;
+		left: 9px;
+		top: 10px;
+		width: 8px;
+		aspect-ratio: 1;
+		rotate: 135deg;
+	}
+}
+
+.partners-list {
+	display: flex;
+	width: 694px;
+	gap: 10px;
+	margin-left: -14px;
+	li {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	li svg {
+		fill: var(--white-color);
+	}
+	li:hover svg {
+		fill: var(--green-color);
+		transition: all .5s ease ;
+	}
+}
 
 
 
