finish services section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@
   --black-color: #0C0C0C;
   --green-color: #64CCC5;
   --orange-color: #ffd930;
+  --grey-color: #f4f4f4;
 }
 
 *, *::after, *::before {
@@ -151,6 +152,7 @@ header .container {
   display: none;
 }
 
+/*First*/
 .green {
   color: var(--green-color);
 }
@@ -172,6 +174,7 @@ main::before {
   background-repeat: no-repeat;
   background-position: 95% 50%;
   background-size: contain;
+  margin-bottom: 100px;
 }
 .first .container {
   display: flex;
@@ -311,6 +314,78 @@ h1 + p {
   transition: all 0.5s ease;
 }
 
+/*Services*/
+hgroup {
+  width: 700px;
+  margin: 0 auto;
+}
+hgroup h2 {
+  font-family: "Roboto Serif", serif;
+  font-size: 1.875rem;
+  font-weight: 600;
+  margin-bottom: 24px;
+  text-align: center;
+  letter-spacing: -0.11rem;
+}
+hgroup h2 + p {
+  color: var(--black-color);
+  text-align: center;
+  font-family: "Roboto Serif", serif;
+  font-size: 4rem;
+  font-weight: 600;
+  margin-bottom: 80px;
+  letter-spacing: -0.1rem;
+}
+
+.services-list {
+  display: grid;
+  gap: 66px 80px;
+  grid-template-columns: repeat(auto-fit, minmax(413px, 1fr));
+  margin-bottom: 117px;
+}
+
+.services-list li {
+  border-radius: 20px;
+  background: var(--grey-color);
+  padding: 45px;
+}
+.services-list li .svg-box {
+  background-color: var(--black-color);
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 62px;
+}
+.services-list li svg {
+  width: 30px;
+  height: 30px;
+}
+.services-list li h3 {
+  color: var(--black-color);
+  font-family: "Roboto Serif", serif;
+  font-size: 1.5625rem;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+.services-list li:hover {
+  background-color: var(--black-color);
+  color: var(--grey-color);
+  transition: all 0.2s ease;
+}
+.services-list li:hover h3 {
+  color: var(--grey-color);
+}
+.services-list li:hover .svg-box {
+  background-color: var(--white-color);
+}
+.services-list li:hover .svg-box svg {
+  filter: invert(1);
+}
+
+/*About*/
 .page-shadow {
   position: fixed;
   left: 0;
