--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,23 @@ header .container {
 }
 .main-menu ul a, .main-menu ul a:visited, .main-menu ul :active {
   color: var(--white-color);
+  position: relative;
+  display: inline-block;
+}
+.main-menu ul a::after, .main-menu ul a:visited::after, .main-menu ul :active::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background: var(--orange-color);
+  bottom: -5px;
+  left: 50%;
+  display: inline-block;
+  transition: all 0.3s ease;
+  transform: translateX(-50%);
+}
+.main-menu ul a:hover::after, .main-menu ul a:visited:hover::after, .main-menu ul :active:hover::after {
+  width: calc(100% - 10px);
 }
 
 .buttons-block {
