--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -107,6 +107,23 @@ header {
 	padding: 17px 0;
 	a, a:visited, :active {
 		color: var(--white-color);
+		position: relative;
+		display: inline-block;
+		&::after {
+			content: '';
+			position: absolute;
+			width: 0;
+			height: 2px;
+			background: var(--orange-color);
+			bottom: -5px;
+			left: 50%;
+			display: inline-block;
+			transition: all .3s ease;
+			transform: translateX(-50%);
+		}
+		&:hover::after {
+			width: calc(100% - 10px);
+	   }
 	}
 }
 
@@ -118,6 +135,9 @@ header {
 .hamburger {
 	display: none;
 }
+
+
+
 
 /*First*/
 
