--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,7 +39,6 @@ a {
 
 img {
 	width: 100%;
-	height: 100%;
 	object-fit: contain;
 	vertical-align: top;
 }
@@ -81,7 +80,6 @@ button {
 		transition: all .3s;
 		border-radius: 10rem;
 		z-index: -1;
-
   	}
   	&:hover::before {
       width: 100%;
@@ -98,6 +96,9 @@ header {
 		display: flex;
 		justify-content: space-between;
 		margin-left: 226px;
+	}
+	.logo img {
+		height: 100%;
 	}
 }
 
@@ -136,9 +137,6 @@ header {
 	display: none;
 }
 
-
-
-
 /*First*/
 
 .green {
@@ -150,7 +148,7 @@ main {
 	&::before {
 		position: absolute;
 		content: url('../img/index/ornament.svg');
-		top: calc(1% + 36px);
+		top: calc(1% + 18px);
 	}
 }
 
@@ -338,9 +336,9 @@ hgroup {
 
 .services-list {
 	display: grid;
-	gap: 66px 80px;
-	grid-template-columns: repeat(auto-fit, minmax(413px, 1fr));
-	margin-bottom: 117px;
+	gap: 78px 66px;
+	grid-template-columns: repeat(auto-fit, minmax(422px, 1fr));
+	margin-bottom: 122px;
 }
 
 .services-list li {
@@ -367,6 +365,7 @@ hgroup {
 		font-size: 1.5625rem;
 		font-weight: 500;
 		margin-bottom: 15px;
+		letter-spacing: -0.01rem;
 	}
 	&:hover {
 		background-color: var(--black-color);
@@ -385,6 +384,136 @@ hgroup {
 }
 
 /*About*/
+.about-us {
+	background-color: var(--black-color);
+	.container {
+		padding-top: 163px;
+		display: flex;
+		gap: 64px;
+		padding-bottom: 100px;
+	}
+	.gallery {
+		position: relative;
+		width: 55%;
+		.image-box {
+			width: 640px;
+			aspect-ratio: 1;
+			border-radius: 20px;
+		}
+		img {
+			border-radius: 20px;
+		}
+	}
+	.text-content {
+		width: 586px;
+		color: var(--white-color);
+		hgroup {
+			width: auto;
+			+ p {
+			margin-bottom: 25px;
+		}
+		}
+		h2 {
+			text-align: left;
+			margin-top: 17px;
+			+ p {
+				color: var(--white-color);
+				text-align: left;
+				letter-spacing: -0.15rem;
+				margin-bottom: 25px;
+			}
+		}
+	}
+}
+
+.statistics {
+	font-size: 1rem;
+	letter-spacing: 0.03rem;
+	display: flex;
+	gap: 59px;
+	margin-bottom: 32px;
+	.green {
+		font-family: "Roboto Serif", serif;
+		font-size: 2.8125rem;
+		font-weight: 600;
+		margin-bottom: 9px;
+	}
+}
+
+/*Gallery*/
+.photo-1 {
+	position: relative;
+	img{
+		position: relative;
+		z-index: 9;
+	}
+	&::before {
+		position: absolute;
+		content: '';
+		background: rgb(18, 18, 18, 0.2);
+		width: 100%;
+		display: block;
+		height: 100%;
+		border-radius: 20px;
+		z-index: 10;
+	}
+}
+
+.photo-2, .photo-3 {
+	position: absolute;
+	&::before {
+		position: absolute;
+		content: '';
+		background: rgb(18, 18, 18, 0.2);
+		width: 100%;
+		display: block;
+		height: 100%;
+		border-radius: 20px;
+	}
+}
+
+.photo-2 {
+	left: 60px;
+	bottom: 31px;
+	z-index: 8;
+	&::before {
+		left: 0;
+		bottom: 0;
+		z-index: 7;
+	}
+	img {
+		opacity: .5;
+		z-index: 8;
+	}
+}
+
+.photo-3 {
+	left: 7px;
+	bottom: 63px;
+	&::before {
+		left: 0;
+		bottom: 0;
+		z-index: 5;
+	}
+	img {
+		opacity: .2;
+		z-index: 6;
+	}
+}
+
+.photo-1 {
+	left: 112px;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 .page-shadow {
