--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -321,7 +321,7 @@ hgroup {
 		font-weight: 600;
 		margin-bottom: 24px;
 		text-align: center;
-		letter-spacing: -0.11rem;
+		letter-spacing: -0.05rem;
 		+ p {
 			color: var(--black-color);
 			text-align: center;
@@ -391,6 +391,7 @@ hgroup {
 		display: flex;
 		gap: 64px;
 		padding-bottom: 100px;
+		margin-bottom: 107px;
 	}
 	.gallery {
 		position: relative;
@@ -505,11 +506,71 @@ hgroup {
 	left: 112px;
 }
 
+/*Process*/
+.process hgroup {
+	margin-bottom: 98px;
+}
 
+.process-list {
+	display: grid;
+	gap: 92px;
+	grid-template-columns: repeat(auto-fit, minmax(273px, 1fr));
+	width: 98%;
+	margin: 0 auto;
+	margin-bottom: 105px;
+}
 
+.process-list li {
+	.svg-box {
+		background-color: var(--black-color);
+		border-radius: 50%;
+		width: 77px;
+		height: 77px;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		border: 2px solid var(--white-color);
+	}
+	h3 {
+		position: absolute;
+		color: var(--black-color);
+		font-family: "Roboto Serif", serif;
+		font-size: 1.9rem;
+		font-weight: 600;
+		letter-spacing: -0.01rem;
+		left: 102px;
+		top: 25px;
+	}
+	p {
+		font-size: 1rem;
+		letter-spacing: 0.03rem;
+		padding: 0 31px 34px 40px;
 
+	}
+}
 
+.header-box {
+	margin-left: 70px;
+	margin-bottom: 36px;
+	position: relative;
+	&::after {
+		content: url('../img/index/process-arrow.svg');
+		position: absolute;
+		left: -71px;
+		top: 36px;
+		z-index: -1;
+	}
+}
 
+.process-list li:last-of-type .header-box::after {
+	content: url('../img/index/process-arrow-last.svg');
+	position: absolute;
+	right: 0;
+	top: 36px;
+	z-index: -1;
+}
+
+/*Recent*/
 
 
 
