--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@
   --orange-color: #ffd930;
   --grey-color: #f4f4f4;
   --dark-orange: #ff9e30;
+  --dark-grey: #808080;
 }
 
 *, *::after, *::before {
@@ -645,6 +646,39 @@ hgroup h2 + p {
 }
 .project .image-box {
   margin-bottom: 16px;
+  overflow: hidden;
+  border-radius: 20px;
+  position: relative;
+}
+.project .image-box img {
+  object-fit: cover;
+  transition: all 0.5s ease;
+}
+.project .image-box::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.2);
+  opacity: 0;
+}
+.project:hover img {
+  scale: 1.1;
+}
+.project:hover .image-box::after {
+  opacity: 1;
+}
+.project:hover .image-box::before {
+  content: url(../img/index/hover-arrow.svg);
+  position: absolute;
+  left: calc(50% - 20px);
+  top: calc(50% - 20px);
+  z-index: 2;
 }
 .project h3 {
   color: var(--black-color);
@@ -654,7 +688,14 @@ hgroup h2 + p {
   margin-bottom: 10px;
   letter-spacing: -0.07rem;
 }
+.project:hover a, .project:hover h3 {
+  color: var(--black-color);
+}
+.project a, .project a:visited {
+  color: var(--black-color);
+}
 
+/*---------------------*/
 .page-shadow {
   position: fixed;
   left: 0;
