--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,7 @@
 	--orange-color: #ffd930;
 	--grey-color: #f4f4f4;
 	--dark-orange: #ff9e30;
+	--dark-grey: #808080;
 }
 
 *, *::after, *::before {
@@ -621,6 +622,39 @@ hgroup {
 	margin-bottom: 88px;
 	.image-box {
 		margin-bottom: 16px;
+		overflow: hidden;
+		border-radius: 20px;
+		position: relative;
+		img {
+			object-fit: cover;
+			transition: all .5s ease;
+		}
+		&::after {
+			content: '';
+			position: absolute;
+			left: 0;
+			top: 0;
+			display: block;
+			width: 100%;
+			height: 100%;
+			transition: all .5s ease;
+			z-index: 1;
+			background: rgba(0, 0, 0, 0.2);
+			opacity: 0;
+		}
+	}
+	&:hover img {
+		scale: 1.1;
+	}
+	&:hover .image-box::after {
+		opacity: 1;
+	}
+	&:hover .image-box::before {
+		content: url(../img/index/hover-arrow.svg);
+		position: absolute;
+		left: calc(50% - 20px);
+		top: calc(50% - 20px);
+		z-index: 2;
 	}
 	h3 {
 		color: var(--black-color);
@@ -630,7 +664,24 @@ hgroup {
 		margin-bottom: 10px;
 		letter-spacing: -0.07rem;
 	}
+	&:hover a, &:hover h3 {
+		color:	var(--black-color);
+	}
+	a, a:visited {
+		color: var(--black-color)
+	}
 }
+
+
+
+
+
+
+
+
+
+
+/*---------------------*/
 
 .page-shadow {
 	position: fixed;
