--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -128,6 +128,9 @@ header {
 			width: calc(100% - 10px);
 	   }
 	}
+	li a.current {
+		color: var(--green-color);
+	}
 }
 
 .buttons-block {
@@ -748,10 +751,126 @@ hgroup {
 	}
 }
 
+/*Footer*/
+footer {
+	background: var(--black-color);
+	color: #FFF;
+	.container {
+		padding-top: 100px;
+		padding-bottom: 60px;
+	}
+	.block {
+		display: flex;
+		justify-content: space-between;
+		gap: 105px;
+	}
+	.about {
+		width: 357px;
+		img {
+			width: 200px;
+			margin-bottom: 21px;
+		}
+	}
+	h4 {
+		font-family: "Roboto Serif", serif;
+		font-size: 1.25rem;
+		font-weight: 600;
+		margin-bottom: 24px;
+	}
+	.pages li {
+		margin-bottom: 16px;
+		font-size: 1rem;
+		letter-spacing: 0.03rem;
+	}
+	.pages li:last-child {
+		margin-bottom: 0;
+	}
+	a, a:visited {
+		color: var(--grey-color);
+	}
+	a:hover, a:active {
+		color: var(--green-color);
+	}
+}
 
+.subscribe-block {
+	width: 31%;
+	h4 {
+		margin-bottom: 17px;
+	}
+	form {
+		color: var(--text-color);
+		font-family: "DM Sans", sans-serif;
+		font-size: 1.125rem;
+		letter-spacing: 0.03375rem;
+		position: relative;
+		button {
+			position: absolute;
+			padding: 8px 15px;
+			color: var(--white-color);
+			font-family: "DM Sans", sans-serif;
+			font-size: 1.125rem;
+			letter-spacing: 0.03375rem;
+			right: 15px;
+			top: 12px;
+			border-radius: 20px;
+			background: var(--black-color);
+			border: 2px solid black;
+		}
+	}
+	input {
+		width: 433px;
+		padding: 10px 9px 10px 23px;
+		border-radius: 40px;
+		background: #FFF;
+		height: 67px;
+	}	
+}
 
+.block-top {
+	padding-bottom: 101px;
+	border-bottom: 1px solid var(--grey-color);
+	margin-bottom: 29px;
+}
 
+.block-bottom {
+	h4 {
+		margin-bottom: 16px;
+	}
+	address {
+		font-style: normal;
+	}
+}
 
+.socials-list {
+	display: flex;
+	justify-content: space-between;
+	gap: 29px;
+	a {
+		display: inline-block;
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+		background-color: var(--white-color);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border: 1px solid white;
+		&:hover {
+			background-color: var(--black-color);
+			transition: all .2s ease;
+			border: 1px solid white;
+			svg {
+				transition: all .2s ease;
+				filter: invert(1);
+			}
+		}
+	}
+	svg {
+		width: 23px;
+		height: 23px;
+	}
+}
 
 
 
