--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -748,6 +748,7 @@ hgroup h2 + p {
   border: 1px solid black;
   background: transparent;
   position: relative;
+  cursor: pointer;
 }
 .review .buttons-block .slider:hover {
   transition: all 0.2s ease;
@@ -841,6 +842,43 @@ footer a:hover, footer a:active {
   border-radius: 20px;
   background: var(--black-color);
   border: 2px solid black;
+  display: inline-block;
+  cursor: pointer;
+  overflow: hidden;
+  z-index: 1;
+  transition: all 0.3s;
+}
+.subscribe-block form button::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black-color);
+  border-radius: 10rem;
+  z-index: -2;
+}
+.subscribe-block form button::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: var(--orange-color);
+  transition: all 0.3s;
+  border-radius: 10rem;
+  z-index: -1;
+}
+.subscribe-block form button:hover {
+  color: var(--black-color);
+}
+.subscribe-block form button:hover::before {
+  width: 100%;
+}
+.subscribe-block form button:active::before {
+  background-color: var(--dark-orange);
 }
 .subscribe-block input {
   width: 433px;
@@ -848,6 +886,15 @@ footer a:hover, footer a:active {
   border-radius: 40px;
   background: #FFF;
   height: 67px;
+  font-family: "DM Sans", sans-serif;
+  font-size: 1.125rem;
+}
+.subscribe-block input::placeholder {
+  color: var(--text-color);
+  font-family: "DM Sans", sans-serif;
+  font-size: 1.125rem;
+  letter-spacing: 0.03375rem;
+  transform: translateY(2px);
 }
 
 .block-top {
