--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -723,6 +723,7 @@ hgroup {
 			border: 1px solid black;
 			background: transparent;
 			position: relative;
+			cursor: pointer;
 			&:hover {
 				transition: all .2s ease;
 				background: #000;
@@ -816,14 +817,61 @@ footer {
 			border-radius: 20px;
 			background: var(--black-color);
 			border: 2px solid black;
+			display: inline-block;
+			cursor: pointer;
+			overflow: hidden;
+			z-index: 1;
+			transition: all .3s;
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: var(--black-color);
+			border-radius: 10rem;
+			z-index: -2;
+		}
+		&::before {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 0%;
+			height: 100%;
+			background-color: var(--orange-color);
+			transition: all .3s;
+			border-radius: 10rem;
+			z-index: -1;
+		}
+		&:hover {
+			color: var(--black-color);
+		}
+		&:hover::before {
+		width: 100%;
+		}
+		&:active::before {
+			background-color: var(--dark-orange);
 		}
 	}
+}
+
 	input {
 		width: 433px;
 		padding: 10px 9px 10px 23px;
 		border-radius: 40px;
 		background: #FFF;
 		height: 67px;
+		font-family: "DM Sans", sans-serif;
+		font-size: 1.125rem;
+		&::placeholder {
+			color: var(--text-color);
+			font-family: "DM Sans", sans-serif;
+			font-size: 1.125rem;
+			letter-spacing: 0.03375rem;
+			transform: translateY(2px);
+		}
 	}	
 }
 
