--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -398,7 +398,7 @@ hgroup {
 		padding-top: 163px;
 		display: flex;
 		gap: 64px;
-		padding-bottom: 100px;
+		padding-bottom: 174px;
 		margin-bottom: 107px;
 	}
 	.gallery {
@@ -451,8 +451,10 @@ hgroup {
 
 /*Gallery*/
 .photo-1 {
-	position: relative;
-	img{
+	position: absolute;
+	transform: translate(112px, 0);
+	z-index: 9;
+	img {
 		position: relative;
 		z-index: 9;
 	}
@@ -482,36 +484,34 @@ hgroup {
 }
 
 .photo-2 {
-	left: 60px;
-	bottom: 31px;
+	transform: translate(60px, -31px);
 	z-index: 8;
 	&::before {
 		left: 0;
 		bottom: 0;
-		z-index: 7;
+		z-index: 8;
 	}
 	img {
 		opacity: .5;
-		z-index: 8;
+		z-index: 7;
 	}
 }
 
 .photo-3 {
-	left: 7px;
-	bottom: 63px;
+	transform: translate(8px, -63px);
 	&::before {
 		left: 0;
 		bottom: 0;
-		z-index: 5;
+		z-index: 6;
 	}
 	img {
 		opacity: .2;
-		z-index: 6;
+		z-index: 5;
 	}
 }
 
-.photo-1 {
-	left: 112px;
+.photo {
+	transition: transform 1s ease-in-out, z-index 0.5s;
 }
 
 /*Process*/
