--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,7 +293,7 @@ h1 + p {
   padding-bottom: 27px;
 }
 
-.start-trial-btn {
+.go-btn {
   display: flex;
   padding: 10px 20px 10px 10px;
   justify-content: center;
@@ -302,6 +302,7 @@ h1 + p {
   font-size: 1.25rem;
   border-radius: 26px;
   letter-spacing: -0.01rem;
+  width: 212px;
 }
 
 .btn-arrow {
