--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -267,7 +267,7 @@ h1 {
 	}
 }
 
-.start-trial-btn {
+.go-btn {
 	display: flex;
 	padding: 10px 20px 10px 10px;
 	justify-content: center;
@@ -276,6 +276,7 @@ h1 {
 	font-size: 1.25rem;
 	border-radius: 26px;
 	letter-spacing: -0.01rem;
+	width: 212px;
 }
 
 .btn-arrow {
