--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ header {
 header .container {
   display: flex;
   justify-content: space-between;
-  margin-left: 226px;
+  margin-inline: auto;
 }
 header .logo img {
   height: 100%;
@@ -198,7 +198,6 @@ main::before {
 
 .first {
   background-color: var(--black-color);
-  padding-top: 160px;
   padding-bottom: 117px;
   background-image: url("../img/index/round-l.png");
   background-repeat: no-repeat;
@@ -209,9 +208,11 @@ main::before {
 .first .container {
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 .first .text-content {
-  width: 610px;
+  padding-top: 160px;
+  width: 45%;
   color: var(--white-color);
   margin-left: 5px;
 }
@@ -222,7 +223,6 @@ main::before {
   margin-bottom: 6px;
 }
 .first .image-box {
-  align-self: flex-start;
   width: 550px;
   aspect-ratio: 1;
   margin-right: 45px;
@@ -244,6 +244,17 @@ main::before {
   left: 50%;
   transform: translate(-51%, -50%) rotate(0deg);
   animation: rotate-big 3s linear infinite;
+}
+.first .wrapper {
+  position: absolute;
+  overflow: hidden;
+  width: 60%;
+  left: 49%;
+  top: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  aspect-ratio: 1;
 }
 
 @keyframes rotate-big {
@@ -951,6 +962,366 @@ footer a:hover, footer a:active {
   height: 23px;
 }
 
+/*Media*/
+@media screen and (max-width: 1650px) {
+  .first .container {
+    width: min(90%, 1200px);
+  }
+  .first .image-box {
+    width: 60%;
+  }
+  .first .image-box::before {
+    top: 35%;
+    left: 35%;
+    scale: 0.8;
+  }
+  .first .image-box::after {
+    top: 35%;
+    left: 35%;
+    scale: 0.8;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+  }
+
+  hgroup h2 + p, .recent h2 {
+    font-size: 3rem;
+  }
+
+  .services-list {
+    gap: 50px;
+  }
+  .services-list li .svg-box {
+    margin-bottom: 20px;
+    margin-inline: auto;
+  }
+
+  .about-us .gallery .image-box {
+    width: 500px;
+  }
+}
+@media screen and (max-width: 1552px) {
+  main::before {
+    top: calc(1% - 40px);
+  }
+
+  .services-list {
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  }
+
+  .process-list {
+    gap: 30px;
+  }
+  .process-list .header-box {
+    margin-top: 40px;
+    margin-left: 30px;
+    margin-bottom: 20px;
+    position: relative;
+  }
+  .process-list .header-box::after {
+    display: none;
+  }
+  .process-list li {
+    border: 3px solid var(--grey-color);
+    border-radius: 20%;
+  }
+  .process-list li p {
+    font-size: 1.3rem;
+  }
+  .process-list li h3 {
+    font-size: 1.6rem;
+  }
+
+  .subscribe-block form input {
+    width: 100%;
+  }
+  .subscribe-block form button {
+    left: 65%;
+    right: 4%;
+  }
+}
+@media screen and (max-width: 1430px) {
+  header .container {
+    width: min(90%, 1100px);
+  }
+
+  .first .container {
+    width: min(90%, 1100px);
+  }
+  .first .text-content {
+    padding-top: 80px;
+  }
+  .first h1 {
+    font-size: 3rem;
+  }
+  .first .image-box {
+    width: 60%;
+  }
+  .first .image-box::before {
+    top: 25%;
+    left: 25%;
+    scale: 0.7;
+  }
+  .first .image-box::after {
+    top: 24%;
+    left: 25%;
+    scale: 0.7;
+  }
+
+  hgroup h2 + p, .recent h2 {
+    font-size: 2.5rem;
+  }
+
+  .process-list {
+    grid-template-columns: repeat(auto-fit, minmax(45%, 1fr));
+  }
+  .process-list li {
+    border-radius: 20px;
+  }
+
+  footer .block-bottom {
+    flex-wrap: wrap;
+    gap: 20px 20%;
+    justify-content: space-between;
+  }
+  footer .block-bottom > div {
+    width: 40%;
+  }
+  footer .block-bottom .socials-list {
+    margin-right: auto;
+  }
+}
+@media screen and (max-width: 1328px) {
+  .container {
+    width: min(90%, 1000px);
+  }
+
+  .first {
+    padding-bottom: 80px;
+    margin-bottom: 80px;
+  }
+  .first .text-content {
+    width: 60%;
+  }
+  .first .wrapper {
+    top: -10%;
+    width: 55%;
+  }
+  .first .image-box {
+    width: 55%;
+  }
+  .first .image-box::before {
+    top: 16%;
+    left: 16%;
+    scale: 0.6;
+  }
+  .first .image-box::after {
+    top: 9%;
+    left: 9%;
+    scale: 0.6;
+  }
+  .first h4 {
+    margin-top: 70px;
+  }
+
+  hgroup h2 + p, .recent h2 {
+    margin-bottom: 60px;
+  }
+
+  .services-list {
+    margin-bottom: 80px;
+  }
+  .services-list li {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  .services-list li .svg-box {
+    margin-inline: 10px;
+  }
+  .services-list li h3 {
+    align-self: center;
+    margin-left: 10px;
+  }
+
+  .about-us .container {
+    padding-top: 100px;
+    padding-bottom: 80px;
+    margin-bottom: 80px;
+  }
+  .about-us .gallery .image-box {
+    width: 350px;
+  }
+
+  .process hgroup {
+    margin-bottom: 0;
+  }
+
+  footer .block {
+    gap: 50px;
+  }
+
+  .subscribe-block {
+    width: 40%;
+  }
+
+  footer .block-bottom .socials-list {
+    margin-right: 20%;
+  }
+}
+@media screen and (max-width: 1226px) {
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  .first .container {
+    width: min(90%, 900px);
+  }
+  .first .wrapper {
+    width: 60%;
+  }
+  .first .image-box {
+    width: 55%;
+  }
+  .first .image-box::before {
+    top: 6%;
+    left: 10%;
+    scale: 0.6;
+  }
+  .first .image-box::after {
+    top: -10%;
+    left: -7%;
+    scale: 0.5;
+  }
+}
+@media screen and (max-width: 1065px) {
+  .first .wrapper {
+    display: none;
+  }
+  .first .image-box::before {
+    display: none;
+  }
+  .first .image-box::after {
+    display: none;
+  }
+  .first .text-content {
+    width: 80%;
+    margin-inline: auto;
+  }
+
+  main::before {
+    display: none;
+  }
+
+  hgroup h2 + p, .recent h2 {
+    font-size: 2.1rem;
+  }
+
+  .about-us .gallery .image-box {
+    width: 300px;
+  }
+
+  .photo-2 {
+    transform: translate(77px, 35px);
+  }
+
+  .photo-3 {
+    transform: translate(45px, 69px);
+  }
+
+  .review {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .review .image-box {
+    margin: 10px;
+    margin-right: 30px;
+  }
+  .review blockquote {
+    width: 70%;
+    align-self: center;
+    margin-bottom: 20px;
+    font-size: 1.2rem;
+  }
+  .review .author, .review .position {
+    width: 100%;
+  }
+
+  .services-list li {
+    padding: 20px;
+  }
+  .services-list li .svg-box {
+    margin-bottom: 0;
+  }
+  .services-list li h3 {
+    margin-bottom: 0;
+  }
+  .services-list li p {
+    padding: 10px;
+  }
+
+  footer .container {
+    padding-top: 60px;
+    width: min(90%, 700px);
+  }
+  footer .block-top {
+    flex-wrap: wrap;
+    padding-bottom: 40px;
+  }
+  footer .block-top div {
+    width: 70%;
+    margin-inline: auto;
+  }
+  footer .block-top .pages {
+    display: none;
+  }
+  footer .block-bottom {
+    gap: 20px;
+  }
+  footer .block-bottom .socials-list {
+    margin-inline: auto;
+  }
+  footer .block-bottom .address {
+    display: none;
+  }
+}
+@media screen and (max-width: 986px) {
+  hgroup {
+    width: 70%;
+  }
+
+  .about-us .container {
+    padding-top: 60px;
+  }
+  .about-us .gallery {
+    display: none;
+  }
+  .about-us .text-content {
+    width: 70%;
+    margin-inline: auto;
+  }
+
+  .review .image-box {
+    width: 100px;
+    height: 100px;
+  }
+
+  .review-block {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (max-width: 864px) {
+  .partners-list {
+    margin: 0;
+    width: 100%;
+    gap: 0;
+    justify-content: space-between;
+  }
+  .partners-list li {
+    scale: 0.8;
+  }
+}
 /*---------------------*/
 .page-shadow {
   position: fixed;
