--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -97,7 +97,7 @@ header {
 	.container {
 		display: flex;
 		justify-content: space-between;
-		margin-left: 226px;
+		margin-inline: auto;
 	}
 	.logo img {
 		height: 100%;
@@ -162,7 +162,6 @@ main {
 
 .first {
 	background-color: var(--black-color);
-	padding-top: 160px;
 	padding-bottom: 117px;
 	background-image: url('../img/index/round-l.png');
 	background-repeat: no-repeat;
@@ -172,9 +171,11 @@ main {
 	.container {
 		display: flex;
 		justify-content: space-between;
+		position: relative;
 	}
 	.text-content{
-		width: 610px;
+		padding-top: 160px;
+		width: 45%;
 		color: var(--white-color);
 		margin-left: 5px;
 	}
@@ -185,7 +186,6 @@ main {
 		margin-bottom: 6px;
 	}
 	.image-box {
-		align-self: flex-start;
 		width: 550px;
 		aspect-ratio: 1;
 		margin-right: 45px;
@@ -198,6 +198,7 @@ main {
 			left:50%;
 			transform: translate(-50%, -50%) rotate(0deg);
 			animation: rotate-small 10s linear infinite;
+	//		border: 5px solid darkcyan;
 		}
 		&::after {
 			content: url('../img/index/round-m.png');
@@ -206,7 +207,19 @@ main {
 			left:50%;
 			transform: translate(-51%, -50%) rotate(0deg);
 			animation: rotate-big 3s linear infinite;
+	//		border: 5px solid darkcyan;
 		}
+	}
+	.wrapper {
+		position: absolute;
+		overflow: hidden;
+		width: 60%;
+		left: 49%;
+		top: 2%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		aspect-ratio: 1;
 	}
 }
 
@@ -932,10 +945,414 @@ footer {
 }
 
 
+/*Media*/
+@media screen and (max-width: 1650px) {
+	.first {
+		.container {
+			width: min(90%, 1200px);
+		}
+		.image-box {
+			width: 60%;
+			&::before {
+				top: 35%;
+				left: 35%;
+				scale: .8;
+			}
+			&::after {
+				top: 35%;
+				left: 35%;
+				scale: .8;
+			}
+		}
+	}
+
+h1 {
+	font-size: 3.5rem;
+}
+hgroup h2 + p, .recent h2 {
+    font-size: 3rem;
+}
+
+.services-list {
+    gap: 50px;
+	li .svg-box {
+		margin-bottom: 20px;
+		margin-inline: auto;
+	}
+}
+
+.about-us .gallery .image-box {
+		width: 500px;
+	}
+}
+
+@media screen and (max-width: 1552px) {
+
+
+main::before {
+	top: calc(1% - 40px);
+}
+
+.services-list {
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+}
+
+.process-list {
+	gap: 30px;
+	.header-box {
+		margin-top: 40px;
+		margin-left: 30px;
+		margin-bottom: 20px;
+		position: relative;
+		&::after {
+			display: none;
+		}
+	}
+	li {
+		border: 3px solid var(--grey-color);
+		border-radius: 20%;
+		p {
+		font-size: 1.3rem;
+		}
+		h3 {
+		font-size: 1.6rem;
+		}
+	}
+}
+.subscribe-block form {
+
+	input {
+		width: 100%;
+	}
+
+	button { 
+		left: 65%;
+		right: 4%;
+	}
+}
+
+
+}
+
+@media screen and (max-width: 1430px) {
+
+	header .container {
+		width: min(90%, 1100px);
+	}
+
+	.first {
+		.container {
+			width: min(90%, 1100px);
+		}
+		.text-content {
+			padding-top: 80px;
+		}
+		h1 {
+			font-size: 3rem;
+		}
+		.image-box {
+			width: 60%;
+			&::before {
+				top: 25%;
+				left: 25%;
+				scale: .7;
+			}
+			&::after {
+				top: 24%;
+				left: 25%;
+				scale: .7;
+			}
+		}
+	}
+	
+	hgroup h2 + p, .recent h2 {
+        font-size: 2.5rem;
+    }
+
+	.process-list {
+		grid-template-columns: repeat(auto-fit, minmax(45%, 1fr));
+		li {
+			border-radius: 20px;
+		}
+	}
+
+	footer .block-bottom {
+		flex-wrap: wrap;
+		gap: 20px 20%;
+		justify-content: space-between;
+		> div {
+			width: 40%;
+		}
+		.socials-list {
+			margin-right: auto;
+		}
+	}
+}
+
+
+@media screen and (max-width: 1328px) {
+
+	.container {
+		width: min(90%, 1000px);
+	}
+
+	.first {
+		padding-bottom: 80px;
+		margin-bottom: 80px;
+		.text-content {
+			width: 60%;
+		}
+		.wrapper {
+			top: -10%;
+			width: 55%;
+		}
+		.image-box {
+			width: 55%;
+			&::before {
+				top: 16%;
+				left: 16%;
+				scale: .6;
+			}
+			&::after {
+				top: 9%;
+				left: 9%;
+				scale: .6;
+			}
+		}
+		h4 {
+			margin-top: 70px;
+		}
+	}
+
+	hgroup h2 + p, .recent h2 {
+		margin-bottom: 60px;
+	}
+
+	.services-list {
+		margin-bottom: 80px;
+		li {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		.svg-box {
+			margin-inline: 10px;
+		}
+		h3 {
+			align-self: center;
+			margin-left: 10px;
+
+		}
+	}
+}
+
+	.about-us {
+		.container {
+			padding-top: 100px;
+			padding-bottom: 80px;
+			margin-bottom: 80px;
+		}
+	
+		.gallery .image-box {
+			width: 350px;
+		}
+	}
+
+	.process hgroup {
+		margin-bottom: 0;
+	}
+
+	footer .block {
+		gap: 50px;
+	}
+
+	.subscribe-block {
+		width: 40%;
+	}
+
+	footer .block-bottom .socials-list {
+        margin-right: 20%;
+    }
+}
+
+
+@media screen and (max-width: 1226px) {
+	h1 {
+		font-size: 1.8rem;
+	}
+
+	.first {
+		.container {
+			width: min(90%, 900px);
+		}
+		.wrapper {
+			width: 60%;
+		}
+		.image-box {
+			width: 55%;
+			&::before {
+				top: 6%;
+				left: 10%;
+				scale: .6;
+			}
+			&::after {
+				top: -10%;
+				left: -7%;
+				scale: .5;
+			}
+		}
+
+	}
+}
+
+@media screen and (max-width: 1065px) {
+	.first {
+		.wrapper {
+		display: none;
+		}
+		.image-box {
+			&::before {
+				display: none;
+			}
+			&::after {
+				display: none;
+			}
+		}
+		.text-content {
+			width: 80%;
+			margin-inline: auto;
+		}
+	}
+
+	main::before {
+		display: none;
+	}
+
+	hgroup h2 + p, .recent h2 {
+        font-size: 2.1rem;
+    }
+
+	.about-us .gallery .image-box {
+		width: 300px;
+	}
+
+	.photo-2 {
+    transform: translate(77px, 35px);
+	}
+
+	.photo-3 {
+    transform: translate(45px, 69px);
+	}
+
+.review {
+	display: flex;
+	flex-wrap: wrap;
+	.image-box {
+		margin: 10px;
+		margin-right: 30px;
+	}
+
+	blockquote {
+		width: 70%;
+		align-self: center;
+		margin-bottom: 20px;
+		font-size: 1.2rem;
+	}
+	.author, .position {
+		width: 100%;
+	}
+}
+
+.services-list li {
+	padding: 20px;
+
+	.svg-box {
+		margin-bottom: 0;
+	}
+
+	h3 {
+		margin-bottom: 0;
+	}
+	p {
+		padding: 10px;
+	}
+}
+
+footer {
+	.container {
+		padding-top: 60px;
+		width: min(90%, 700px);
+	}
+	.block-top {
+		flex-wrap: wrap;
+		padding-bottom: 40px;
+		div {
+			width: 70%;
+			margin-inline: auto;
+		}
+
+		.pages {
+			display: none;
+		}
+	}
+
+	.block-bottom {
+		gap: 20px;
+		.socials-list {
+			margin-inline: auto;
+		}
+		.address {
+			display: none;
+		}
+	}
+}
+}
+
+@media screen and (max-width: 986px) {
+hgroup {
+	width: 70%;
+}
+.about-us {
+	.container {
+		padding-top: 60px;
+	}
+	.gallery {
+		display: none;
+	}
+	.text-content {
+		width: 70%;
+		margin-inline: auto;
+	}
+}
+
+.review .image-box {
+	width: 100px;
+	height: 100px;
+}
+
+.review-block {
+	margin-bottom: 60px;
+}
+
+}
+
+@media screen and (max-width: 864px) {
+
+	.partners-list {
+		margin: 0;
+		width: 100%;
+		gap: 0;
+		justify-content: space-between;
+		li {
+		scale: .8;
+		}
+	}
+}
 
 
 /*---------------------*/
+@media screen and (max-width: 820px) {
 
+}
 .page-shadow {
 	position: fixed;
 	left: 0;
