--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1392,7 +1392,7 @@ footer a:hover, footer a:active {
     display: none;
   }
   footer .block-bottom {
-    gap: 20px;
+    gap: 30px;
   }
   footer .block-bottom .socials-list {
     margin-inline: auto;
@@ -1451,6 +1451,41 @@ footer a:hover, footer a:active {
     display: flex;
     gap: 20px;
   }
+
+  .partners-list {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+
+  .partners-list li:last-child {
+    scale: 0.7;
+    transform: translate(-31px);
+  }
+
+  .first {
+    padding-bottom: 60px;
+    margin-bottom: 60px;
+  }
+
+  .services-list li .svg-box {
+    scale: 0.7;
+  }
+
+  .about-us .container {
+    padding-bottom: 60px;
+    margin-bottom: 60px;
+  }
+
+  .project h3 {
+    font-size: 1.5rem;
+  }
+
+  .process-list li .svg-box {
+    scale: 0.7;
+  }
+  .process-list li .svg-box .projects .btn {
+    margin-top: 40px;
+  }
 }
 .page-shadow {
   position: fixed;
@@ -1477,7 +1512,7 @@ footer a:hover, footer a:active {
   transition: all 0.5s ease;
 }
 .mobile-panel .logo {
-  scale: 0.8;
+  scale: 0.6;
   padding-top: 10px;
 }
 
@@ -1497,4 +1532,153 @@ footer a:hover, footer a:active {
   padding: 10px 30px;
   color: var(--dark-grey);
   width: 100%;
+}
+
+@media screen and (max-width: 674px) {
+  .first h1 {
+    font-size: 2rem;
+  }
+  .first h1 + p {
+    width: 100%;
+  }
+
+  .process-list {
+    grid-template-columns: 1fr;
+    margin-bottom: 60px;
+  }
+
+  .process-list .header-box {
+    margin-top: 18px;
+    margin-left: 28px;
+    margin-bottom: 6px;
+  }
+
+  .review .image-box {
+    display: none;
+  }
+  .review blockquote {
+    width: 100%;
+  }
+
+  .projects {
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    gap: 0;
+  }
+  .projects .side {
+    width: 100%;
+  }
+  .projects .btn {
+    margin-top: 0;
+    margin-bottom: 25px;
+  }
+
+  hgroup h2 + p, .recent h2 {
+    margin-bottom: 40px;
+  }
+
+  .project {
+    margin-bottom: 40px;
+  }
+
+  .copyright a, .telephone a {
+    font-size: 1rem;
+  }
+
+  footer .block-top div {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 524px) {
+  .about-us .text-content {
+    width: 90%;
+  }
+
+  .partners-list li {
+    width: 50%;
+    transform: translate(-45px);
+  }
+
+  .first .text-content {
+    padding-top: 40px;
+  }
+}
+@media screen and (max-width: 442px) {
+  header .buttons-block .contact-btn {
+    display: none;
+  }
+
+  header .logo {
+    margin-left: 20px;
+  }
+
+  .services-list li h3 {
+    font-size: 1.3rem;
+  }
+
+  input[type=email]::placeholder {
+    font-size: 1rem;
+  }
+
+  .subscribe-block form button {
+    left: 60%;
+  }
+
+  .services-list li .svg-box {
+    margin-inline: 0;
+    width: 60px;
+    height: 60px;
+  }
+
+  .services-list {
+    grid-template-columns: 1fr;
+  }
+
+  .partners-list li {
+    transform: translate(-33px);
+  }
+
+  hgroup h2 + p, .recent h2 {
+    font-size: 1.5rem;
+    letter-spacing: 0;
+  }
+
+  .services-list li h3 {
+    font-size: 1.1rem;
+  }
+
+  .about-us .text-content h2 + p {
+    letter-spacing: 0;
+  }
+
+  .statistics .green {
+    font-size: 2rem;
+  }
+
+  .process-list li h3 {
+    font-size: 1.3rem;
+  }
+
+  .process-list li p {
+    font-size: 1.1rem;
+  }
+
+  .process-list li .svg-box {
+    width: 60px;
+    height: 60px;
+  }
+
+  .process-list li h3 {
+    left: 71px;
+    top: 18px;
+  }
+
+  footer .block-bottom > div {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 375px) {
+  .subscribe-block form button {
+    left: 50%;
+  }
 }
